--- a/templates/points.html
+++ b/templates/points.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Why Reports &amp; Report Writing Guide</title>
+<title>How Points Work</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -23,16 +23,16 @@ ul.task-list li input[type="checkbox"] {
 </style>
 
 
-<script src="/static/reports_files/libs/clipboard/clipboard.min.js"></script>
-<script src="/static/reports_files/libs/quarto-html/quarto.js"></script>
-<script src="/static/reports_files/libs/quarto-html/popper.min.js"></script>
-<script src="/static/reports_files/libs/quarto-html/tippy.umd.min.js"></script>
-<script src="/static/reports_files/libs/quarto-html/anchor.min.js"></script>
-<link href="/static/reports_files/libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="/static/reports_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
-<script src="/static/reports_files/libs/bootstrap/bootstrap.min.js"></script>
-<link href="/static/reports_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="/static/reports_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<script src="/static/points_files/libs/clipboard/clipboard.min.js"></script>
+<script src="/static/points_files/libs/quarto-html/quarto.js"></script>
+<script src="/static/points_files/libs/quarto-html/popper.min.js"></script>
+<script src="/static/points_files/libs/quarto-html/tippy.umd.min.js"></script>
+<script src="/static/points_files/libs/quarto-html/anchor.min.js"></script>
+<link href="/static/points_files/libs/quarto-html/tippy.css" rel="stylesheet">
+<link href="/static/points_files/libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<script src="/static/points_files/libs/bootstrap/bootstrap.min.js"></script>
+<link href="/static/points_files/libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
+<link href="/static/points_files/libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
 
 
 </head>
@@ -45,21 +45,23 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">Table of contents</h2>
    
   <ul>
-  <li><a href="#why-write-reports" id="toc-why-write-reports" class="nav-link active" data-scroll-target="#why-write-reports"><span class="header-section-number">1</span> Why Write Reports?</a></li>
-  <li><a href="#how-to-write-reports" id="toc-how-to-write-reports" class="nav-link" data-scroll-target="#how-to-write-reports"><span class="header-section-number">2</span> How to Write Reports</a>
+  <li><a href="#how-to-win-points" id="toc-how-to-win-points" class="nav-link active" data-scroll-target="#how-to-win-points"><span class="header-section-number">1</span> How to Win Points</a>
   <ul class="collapse">
-  <li><a href="#rstudio" id="toc-rstudio" class="nav-link" data-scroll-target="#rstudio"><span class="header-section-number">2.1</span> Rstudio</a></li>
-  <li><a href="#quarto" id="toc-quarto" class="nav-link" data-scroll-target="#quarto"><span class="header-section-number">2.2</span> Quarto</a></li>
+  <li><a href="#challenge-level" id="toc-challenge-level" class="nav-link" data-scroll-target="#challenge-level"><span class="header-section-number">1.1</span> Challenge Level</a></li>
+  <li><a href="#datascience-proficiency" id="toc-datascience-proficiency" class="nav-link" data-scroll-target="#datascience-proficiency"><span class="header-section-number">1.2</span> Datascience Proficiency</a></li>
+  <li><a href="#novelty" id="toc-novelty" class="nav-link" data-scroll-target="#novelty"><span class="header-section-number">1.3</span> Novelty</a></li>
+  <li><a href="#featured" id="toc-featured" class="nav-link" data-scroll-target="#featured"><span class="header-section-number">1.4</span> Featured</a></li>
+  <li><a href="#bug-bounty" id="toc-bug-bounty" class="nav-link" data-scroll-target="#bug-bounty"><span class="header-section-number">1.5</span> Bug Bounty</a></li>
   </ul></li>
-  <li><a href="#a-few-more-things" id="toc-a-few-more-things" class="nav-link" data-scroll-target="#a-few-more-things"><span class="header-section-number">3</span> A Few More Things</a></li>
+  <li><a href="#a-few-final-notes" id="toc-a-few-final-notes" class="nav-link" data-scroll-target="#a-few-final-notes"><span class="header-section-number">2</span> A Few Final Notes</a></li>
   </ul>
 </nav>
 </div>
-<main class="content page-columns page-full" id="quarto-document-content">
+<main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Why Reports &amp; Report Writing Guide</h1>
+<h1 class="title">How Points Work</h1>
 </div>
 
 
@@ -76,61 +78,56 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<section id="why-write-reports" class="level2" data-number="1">
-<h2 data-number="1" class="anchored" data-anchor-id="why-write-reports"><span class="header-section-number">1</span> Why Write Reports?</h2>
-<p>Many (if not all) challenges you complete will require a report. But why reports?</p>
-<p>Reports are the most common medium for communicating your results. Their universality ensures that every participant, regardless of the project they choose, can produce a standardized output. However, if you have other ideas for presenting your results, we welcome your creativity and innovation.</p>
-<p>Reports can be submitted <a href="/submission">here</a> and should be in HTML or PDF format.</p>
+<p>Points are the challenge’s internal currency, designed to:</p>
+<ul>
+<li><p>Track your progress.</p></li>
+<li><p>Encourage creativity and effort.</p></li>
+<li><p>Reward participation in various activities.</p></li>
+</ul>
+<p>They’re not just about competing but also about celebrating your growth throughout the challenge. Even if you don’t have the highest score, collecting points can open opportunities for recognition, blog features and bragging rights.</p>
+<p>You can view your points in the top right corner of the header.</p>
+<p>Keep in mind, points are awarded scarcely, so don’t be discouraged.</p>
+<section id="how-to-win-points" class="level2" data-number="1">
+<h2 data-number="1" class="anchored" data-anchor-id="how-to-win-points"><span class="header-section-number">1</span> How to Win Points</h2>
+<p>Points are meant to represent participation in the challenge, and can be won in a few ways.</p>
+<section id="challenge-level" class="level3" data-number="1.1">
+<h3 data-number="1.1" class="anchored" data-anchor-id="challenge-level"><span class="header-section-number">1.1</span> Challenge Level</h3>
+<p>The main way to earn points is by completing the weekly challenges. Challenges are split into three tiers based on difficulty:</p>
+<p>Easy Challenge: <strong>1 point</strong></p>
+<p>Medium Challenge: <strong>2 points</strong></p>
+<p>Hard Challenge: <strong>3 points</strong></p>
+<p>Points are awarded for earnestly* attempting challenges, so don’t worry if you’re unsure of the solution—participation matters!</p>
 </section>
-<section id="how-to-write-reports" class="level2 page-columns page-full" data-number="2">
-<h2 data-number="2" class="anchored" data-anchor-id="how-to-write-reports"><span class="header-section-number">2</span> How to Write Reports</h2>
-<p>Since no one wants to spend their holidays writing lengthy assessment-grade reports, the standard report has been simplified to a few key questions relevant to your project. Attached to each problem, you’ll find approximately <strong>three questions</strong> designed to help readers better understand your work. However, consider these as guidelines only—if you wish to include more details or go above and beyond to showcase your work, it will be greatly appreciated.</p>
-<p>The three questions are designed as short-answer prompts, with a suggested guideline of approximately 200 words per question—or as many words as you need to convey your ideas.</p>
-<p><strong>Remember</strong>: That data science results are only as useful as they are inteligable. For the sake of your reader, the communication is just as useful as the results themself.</p>
-<p>Below, you’ll find several sections on software tools that can help you create professional, polished reports, including those with code blocks. However, if you’re comfortable using regular Excel, feel free to continue with that.</p>
-<section id="rstudio" class="level3 page-columns page-full" data-number="2.1">
-<h3 data-number="2.1" class="anchored" data-anchor-id="rstudio"><span class="header-section-number">2.1</span> Rstudio</h3>
-<p><em>For those with experience having complete data1001 or data2x02, you may skip this section.</em></p>
-<p>RStudio is a software primarily designed for academic data exploration and statistics using the R programming language. It also includes features like Quarto and an easy way to knit R Markdown (.rmd) and Quarto (.qmd) files.</p>
-<p>to get started you will want to install <a href="https://posit.co/download/rstudio-desktop/"> rstudio</a>.</p>
-
-<div class="no-row-height column-margin column-container"><div class="">
-<p>To run reticulate (the r extension that enables python) you will need to seperately install python <a href="https://www.python.org/downloads/"> here</a>.</p>
-</div></div><p>Once you get rstudio working you can use one of the many existing templates in a rmd or qmd file, or use a yaml header at the top of your document. Then in the application you can run ‘knit’ to produce a pdf or html document.</p>
-<pre class="{yaml}"><code>---
-title: "Sample Quarto Document"
-author: "Your Name"
-date: "`r Sys.Date()`"
-format: 
-  html: 
-    toc: true
-    toc-depth: 2
-    code-fold: true
-  pdf: 
-    keep-tex: true
-    number-sections: true
-abstract: |
-  This is a sample Quarto document. 
-  It demonstrates the use of YAML metadata for customization.
-params:
-  example_param: "default_value"
-editor: visual
----</code></pre>
-<p>If you are working with RStudio there are many templates available for your use. One such can be found in the footer (rticles).</p>
+<section id="datascience-proficiency" class="level3" data-number="1.2">
+<h3 data-number="1.2" class="anchored" data-anchor-id="datascience-proficiency"><span class="header-section-number">1.2</span> Datascience Proficiency</h3>
+<p>Beyond just solving a challenge, the quality of your work is graded and can earn you up to <strong>4 points</strong>:</p>
+<ul>
+<li><p>How well you addressed discussion questions.</p></li>
+<li><p>Your modeling or analytical techniques.</p></li>
+<li><p>How your results compare to peers.</p></li>
+<li><p>Effort and creativity in your submission.</p></li>
+<li><p>High-quality submissions can boost your score, even for easier challenges.</p></li>
+</ul>
 </section>
-<section id="quarto" class="level3" data-number="2.2">
-<h3 data-number="2.2" class="anchored" data-anchor-id="quarto"><span class="header-section-number">2.2</span> Quarto</h3>
-<p>If you prefer using the CLI, you can use Quarto directly from the command line. Creating a Quarto file is as simple as adding a header like the one above, and then running quarto render file.qmd in the command line (assuming Quarto is installed).</p>
+<section id="novelty" class="level3" data-number="1.3">
+<h3 data-number="1.3" class="anchored" data-anchor-id="novelty"><span class="header-section-number">1.3</span> Novelty</h3>
+<p>In addition to this, there is a novelty criteria that makes up to <strong>2 points</strong>. As per the name sake, novel submissions will be appreciated, and rewarded with additional points.</p>
+</section>
+<section id="featured" class="level3" data-number="1.4">
+<h3 data-number="1.4" class="anchored" data-anchor-id="featured"><span class="header-section-number">1.4</span> Featured</h3>
+<p>Starting week 1, a blog will be released, where the best submission will be showcased. All submissions featured within the blog will win a bounty of <strong>6 points</strong> devided among the showcased submissions.</p>
+</section>
+<section id="bug-bounty" class="level3" data-number="1.5">
+<h3 data-number="1.5" class="anchored" data-anchor-id="bug-bounty"><span class="header-section-number">1.5</span> Bug Bounty</h3>
+<p>Find a substanticial bug within the website or security vunerability and win <strong>1 point or 2 points</strong> depending on the severity.</p>
 </section>
 </section>
-<section id="a-few-more-things" class="level2" data-number="3">
-<h2 data-number="3" class="anchored" data-anchor-id="a-few-more-things"><span class="header-section-number">3</span> A Few More Things</h2>
-<p>Considerations for Report Writing:</p>
-<p><em>What is the background of my reader?</em> You can assume that your readers are your peers—university students in data science or related fields.</p>
-<p><strong>Graphs!</strong> A picture is worth a thousand words, and graphs are an effective way to communicate ideas. Including graphs in Quarto and R Markdown (.rmd) files is particularly easy, as your output can be “knitted” directly into the report. Alternatively, including a graph as a screenshot is a great way to demonstrate your points.</p>
-<p><strong>Innovation</strong> While the questions provide a general direction for tackling the challenge or exploring the dataset, we encourage you to think creatively. If you believe there’s a more pressing question to explore, feel free to pursue it instead of sticking strictly to the suggested ones. Remember, these questions are simply prompts to inspire discussion and analysis of the dataset, summary, or model you’ve produced. Be innovative and try to stand out among your peers!</p>
-<p>General Report Guidelines: As always, standard report-writing principles apply. Discuss the limitations of your work and be transparent. Stick to a clear structure, but there’s no need for citations. Be concise—if you’re using language models for writing, ensure the content is direct and doesn’t waste the reader’s time. When submitting, take advantage of the “GitHub” section to include the code that produced your findings.</p>
-<p><strong>Good luck with your writing!</strong></p>
+<section id="a-few-final-notes" class="level2" data-number="2">
+<h2 data-number="2" class="anchored" data-anchor-id="a-few-final-notes"><span class="header-section-number">2</span> A Few Final Notes</h2>
+<p>Due to my poor web design practices points are only updated with your session. This means that you may not see your points increase immediately upon completing a challenge or being scored, because the client side session must update.</p>
+<p>By default, the client side session expired every 3 days, but you can manually trigger a session reset by logging out and logging back in.</p>
+<p>TL;DR, <em>you may have to wait up to 3 days to see your points increase</em></p>
+<p>This points system does not have a super large impact, and is largely a measure of progress. In the spirit of the challenge, learning and participation is more important. Additionally, there are not official prizes as of yet for the victors (which may change throught the challenge). Points grading is largely discresionary and highly opinionated, so don’t take it too seriously, and focus on having fun in the challenge.</p>
 </section>
 
 </main>			<footer style="
