--- a/templates/mining.html
+++ b/templates/mining.html
@@ -265,17 +265,17 @@ ul.task-list li input[type="checkbox"] {
 <p>Leading questions</p>
 <ul>
 <li><p>What metric did you use for plant performance?</p></li>
-<li><p>How does the plant perform by this metric?</p></li>
+<li><p>How does the plant perform each month by this metric?</p></li>
 <li><p>What reccoemndatiosn do you have for the plant operator?</p></li>
 </ul>
 </section>
 <section id="modelling" class="level3" data-number="3.3">
 <h3 data-number="3.3" class="anchored" data-anchor-id="modelling"><span class="header-section-number">3.3</span> Modelling</h3>
 <p>As aformentioned, with a predictive model Engineers could anticipate changes to silica concentrate, and take proactive measures to reduce uneccesary waste of iron concentrate in tailings. Try produce a model to predict Silica Concentrate.</p>
-<p>Here are some leading discussion questions for your report: - What kind of model did you select? Did it take advantage of the time series data?</p>
+<p>Here are some leading discussion questions for your report:</p>
 <ul>
+<li><p>What kind of model did you select? Did it take advantage of the time series data?</p></li>
 <li><p>Evaluate your models performance. What kinds of statistics did you use?</p></li>
-<li><p>If you implemented a more complex time series model, does it out perform other linear modelling techniques?</p></li>
 <li><p>Comment on any limitations with your methodology, data or approach you took.</p></li>
 </ul>
 <p>If you choose a modelling approach refer to the next section for additional modelling considerations</p>
@@ -283,7 +283,7 @@ ul.task-list li input[type="checkbox"] {
 <section id="wildcard" class="level3" data-number="3.4">
 <h3 data-number="3.4" class="anchored" data-anchor-id="wildcard"><span class="header-section-number">3.4</span> Wildcard</h3>
 <p>Or any other ideas you’d like to explore. Additional points for innovative tasks!</p>
-<p>Additionally, for sumbissions you may want to partner with another member of the challenge to contrast a regression vs a LSTM modelling approach for instance.</p>
+<p>Additionally, for submissions you may want to partner with another member of the challenge to contrast a regression vs a LSTM modelling approach for instance.</p>
 </section>
 </section>
 <section id="modelling-considerations" class="level2 page-columns page-full" data-number="4">
@@ -302,7 +302,63 @@ ul.task-list li input[type="checkbox"] {
 </div></div><p>You may also want to remove date as a feature to prevent overfitting.</p>
 </section>
 
-</main>
+</main>			<footer style="
+background-color: rgb(33, 33, 33);
+width: 100vw;
+maxwidth: 100vw;
+color: white;
+display: flex;
+margin-top: 5vh;
+padding-top: 5vh;
+padding-bottom: 5vh;
+justify-content: space-evenly;
+position: relative; /* Positioning context for any additional tweaks */
+left: 50%; /* Move the footer to the middle */
+transform: translateX(-45%);
+				">
+
+				<style>html{padding:0;margin:0;}</style>
+
+				<div class="col">
+					<div class='logo' style="letter-spacing: -0.07em; font-size: 2em; font-family: 'Libre Baskerville', serif;">
+						Datacember	
+					</div>
+					<br>
+					<p style="font-size: 0.8em;"><i>A Datascience December Challenge</i></p>
+				</div>
+
+				<div class="col" style="display:block; line-height: 1vh;">
+					<p class="footer-title" style="font-size: 1.25em; letter-spacing: -0.07; font-family: 'Libre Baskerville', serif;">DataScience</p>
+					<hr style="color: white;">
+					<p><a style="color: white; text-decoration: none; font-size:0.8em;" href="
+						https://pkgs.rstudio.com/rticles/articles/rticles.html
+						">rticles templates</a></p>
+					<p><a style="color: white; text-decoration: none; font-size:0.8em;" href="
+						https://flax.readthedocs.io/en/latest/
+						">Flax - ML library</a></p>
+					<p><a style="color: white; text-decoration: none; font-size:0.8em;" href="https://r4ds.hadley.nz">R for Data Science</a></p>
+				</div>
+
+				<div class="col" style="display:block; line-height: 1vh;">
+					<p class="footer-title" style="font-size: 1.25em; letter-spacing: -0.07; font-family: 'Libre Baskerville', serif;">Developer</p>
+					<hr style="color: white;">
+					<p><a style="color: white; text-decoration: none; font-size:0.8em;" href="https://github.com/datacember/web">website source code</a></p>
+				</div>
+
+				<div class="col" style="display:block; line-height: 1vh;">
+					<p class="footer-title" style="font-size: 1.25em; letter-spacing: -0.07; font-family: 'Libre Baskerville', serif;">Other</p>
+					<hr style="color: white;">
+					<p><a style="color: white; text-decoration: none; font-size:0.8em;" href="/guide/privacy">privacy</a></p>
+					<p><a style="color: white; text-decoration: none; font-size:0.8em;" href="/guide/privacy">privacy</a></p>
+					<p><a style="color: white; text-decoration: none; font-size:0.8em;" href="/guide/thanks">Thanks!</a></p>
+					<p style="font-size:0.8em;">contact:</p>
+					<p style="font-size:0.8em;">alexanderjwells04@gmail.com</p>
+				</div>
+
+
+			</footer>
+
+
 <!-- /main column -->
 <script id="quarto-html-after-body" type="application/javascript">
 window.document.addEventListener("DOMContentLoaded", function (event) {
